# data101

./: .gitignore  Dockerfile  README.md  TODO.md  book.toml  compose.yml  flake.nix  justfile  plan.md  run_locally.sh  shell.nix  typst_compile.sh
.github/workflows/: deploy-book.yml  docker-build.yml
preprocessor/: Cargo.toml
preprocessor/src/: main.rs
slides/: .gitignore  cli.md  contributing.md  git.md
src/: SUMMARY.md  contributing.md  getting_started.md  git.md  glossary.md  introduction.md  the_editor.md
src/advanced/: cli.md  editor.md  git.md  ssh.md
src/beginner/: AI.md  AI_draft.md  cli.md  editor.md  files.md  git-gitignore.md  git-intro.md  git-remote.md  git-setup.md  git-workflow.md  git.md  linux.md  protips.md  ssh.md
src/beginner/cli/: autocompletion.md  basics.md  commands.md  environment_variables.md  flags.md  globbing.md  index.md  packagemanagers.md  paths.md  powershell.md
src/beginner/editor/: bad_habits.md  basics.md  command_palette.md  common.md  extensions.md  index.md  (+2 more)
src/courses/: AI.md  AI_draft.md  TDA555.md  general_tips.md  index.md
src/editor/: index.md
src/further_reading/: ssh.md
src/git/: index.md
src/introduction/: getting_started.md  introduction.md
src/manuals/: index.md  latex.md  make.md
src/studies/: FAQ.md  basics.md  canvas.md  chalmers_apps.md  courses.md  eduroam.md  exams.md  index.md  master.md  master_old.md  wip.md
theme/: book.js  development.hbs  highlight.css  index.hbs
theme/css/: chrome.css  general.css  print.css  variables.css
typst/: commands.typ  common.typ  vscode.typ
(+12 files in other folders)
