[package]
name = "preprocessor-data101"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdbook = "0.4.18"
serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.28"
clap = { version = "3.0", features = ["cargo"] }
semver = "1.0"
regex = "1.5.6"
